remove game C,D and change game A,B name

--- a/src/pages/convert/convert.html
+++ b/src/pages/convert/convert.html
@@ -26,7 +26,7 @@
     <ion-item no-lines class="itemContent">
       <ion-row>
         <ion-col col-4>
-          Game AAA
+          scratch lotto
         </ion-col>
       </ion-row>
       <ion-row>
@@ -41,7 +41,7 @@
     <ion-item no-lines class="itemContent">
       <ion-row>
         <ion-col col-4>
-          Game BBB
+          slot machine
         </ion-col>
       </ion-row>
       <ion-row>
@@ -52,37 +52,6 @@
         </ion-col>
       </ion-row>
     </ion-item>
-
-    <ion-item no-lines class="itemContent">
-      <ion-row>
-        <ion-col col-4>
-          Game CCC
-        </ion-col>
-      </ion-row>
-      <ion-row>
-        <ion-col>
-          <div (click)="goC()">
-            <img src="../../assets/imgs/GameC.png" style="height: 120px;width: 300px" />
-          </div>
-        </ion-col>
-      </ion-row>
-    </ion-item>
-
-    <ion-item no-lines class="itemContent">
-      <ion-row>
-        <ion-col col-4>
-          Game DDD
-        </ion-col>
-      </ion-row>
-      <ion-row>
-        <ion-col>
-          <div (click)="goD()">
-            <img src="../../assets/imgs/GameD.jpg" style="height: 120px;width: 300px" />
-          </div>
-        </ion-col>
-      </ion-row>
-    </ion-item>
-
   </div>
 
 </ion-content>
