--- a/src/pages/convertclick-b/convertclick-b.html
+++ b/src/pages/convertclick-b/convertclick-b.html
@@ -23,7 +23,7 @@
     <ion-item no-lines class="itemContent">
       <ion-row>
         <ion-col col-4>
-          Game BBB
+          slot machine
         </ion-col>
       </ion-row>
       <ion-row>
