--- a/src/pages/membership/membership.html
+++ b/src/pages/membership/membership.html
@@ -49,7 +49,7 @@
 
     <ion-row padding>
       <ion-col col-12>
-        <b>Game AAA</b>
+        <b>scratch lotto</b>
       </ion-col>
       <ion-col col-12>
         <div (click)="goToGameDetailPage()">
@@ -60,7 +60,7 @@
 
     <ion-row padding>
       <ion-col col-12>
-        <b>Game BBB</b>
+        <b>slot machine</b>
       </ion-col>
       <ion-col col-12>
         <div (click)="goB()">
@@ -68,28 +68,6 @@
         </div>
       </ion-col>
     </ion-row>
-    <ion-row padding>
-      <ion-col col-12>
-        <b>Game CCC</b>
-      </ion-col>
-      <ion-col col-12>
-        <div (click)="goC()">
-          <img src="../../assets/imgs/GameC.png" style="height: 120px;width: 300px" />
-        </div>
-      </ion-col>
-    </ion-row>
-
-    <ion-row padding>
-      <ion-col col-12>
-        <b>Game DDD</b>
-      </ion-col>
-      <ion-col col-12>
-        <div (click)="goD()">
-          <img src="../../assets/imgs/GameD.jpg" style="height: 120px;width: 300px" />
-        </div>
-      </ion-col>
-    </ion-row>
-
   </ion-grid>
 
 
