--- a/src/pages/ticket/ticket.html
+++ b/src/pages/ticket/ticket.html
@@ -23,7 +23,7 @@
     <ion-item no-lines class="itemContent">
       <ion-row>
         <ion-col col-4 class="game-title">
-          Game AAA
+          scratch lotto
         </ion-col>
         <ion-col col-4 offset-4>
           <ion-badge color="secondary"> (Ticket 4)</ion-badge>
@@ -41,7 +41,7 @@
     <ion-item no-lines class="itemContent">
       <ion-row>
         <ion-col col-4 class="game-title">
-          Game BBB
+          slot machine
         </ion-col>
         <ion-col col-4 offset-4>
           <ion-badge color="secondary"> (Ticket 4)</ion-badge>
@@ -51,24 +51,6 @@
         <ion-col>
           <div (click)="goToPrePlay()">
             <img src="../../assets/imgs/GameB.jpg" style="height: 120px;width: 300px" />
-          </div>
-        </ion-col>
-      </ion-row>
-    </ion-item>
-
-    <ion-item no-lines class="itemContent">
-      <ion-row>
-        <ion-col col-4 class="game-title">
-          Game CCC
-        </ion-col>
-        <ion-col col-4 offset-4>
-          <ion-badge color="secondary"> (Ticket 10)</ion-badge>
-        </ion-col>
-      </ion-row>
-      <ion-row>
-        <ion-col>
-          <div (click)="goToPrePlay()">
-            <img src="../../assets/imgs/GameC.png" style="height: 120px;width: 300px" />
           </div>
         </ion-col>
       </ion-row>
