--- a/src/pages/convertclick/convertclick.html
+++ b/src/pages/convertclick/convertclick.html
@@ -23,7 +23,7 @@
     <ion-item no-lines class="itemContent">
       <ion-row>
         <ion-col col-4>
-          Game AAA
+          scratch lotto
         </ion-col>
       </ion-row>
       <ion-row>
