edit back buttons all apge

--- a/src/pages/collection/collection.html
+++ b/src/pages/collection/collection.html
@@ -1,13 +1,16 @@
 <ion-header>
 
-  <ion-navbar color="pink" >
+  <ion-toolbar color="pink">
+    <button ion-button clear small (click)="backpage()">
+      <ion-icon name="arrow-back"></ion-icon>
+    </button>
     <ion-title center text-center>Collection</ion-title>
     <ion-buttons right>
       <button ion-button (click)="Membership()">
         <ion-icon ios="ios-home" md="md-home"></ion-icon>
       </button>
     </ion-buttons>
-  </ion-navbar>
+  </ion-toolbar>
 
 </ion-header>
 
@@ -52,7 +55,7 @@
       <br>
 
       <div text-right>
-        <b (click)="DetailCollectionA()">Detail ></b>
+        <b>Detail ></b>
       </div>
     </ion-card-content>
   </ion-card>
