--- a/src/pages/membership/membership.html
+++ b/src/pages/membership/membership.html
@@ -1,7 +1,10 @@
 <ion-header>
-  <ion-navbar color="pink">
+  <ion-toolbar color="pink">
+    <button ion-button clear small (click)="backpage()">
+      <ion-icon name="arrow-back"></ion-icon>
+    </button>
     <ion-title>Membership</ion-title>
-  </ion-navbar>
+  </ion-toolbar>
 </ion-header>
 
 <ion-content>
