--- a/src/pages/tradedetail/tradedetail.html
+++ b/src/pages/tradedetail/tradedetail.html
@@ -1,12 +1,15 @@
 <ion-header>
-  <ion-navbar color="pink">
+  <ion-toolbar color="pink">
+    <button ion-button clear small (click)="backpage()">
+      <ion-icon name="arrow-back"></ion-icon>
+    </button>
     <ion-title>Trade</ion-title>
     <ion-buttons right>
       <button ion-button (click)="Membership()">
-        <ion-icon ios="ios-home" md="md-home" ></ion-icon>
+        <ion-icon ios="ios-home" md="md-home"></ion-icon>
       </button>
     </ion-buttons>
-  </ion-navbar>
+  </ion-toolbar>
 </ion-header>
 
 
