--- a/src/pages/tradesell/tradesell.html
+++ b/src/pages/tradesell/tradesell.html
@@ -1,12 +1,15 @@
 <ion-header>
-  <ion-navbar color="pink">
+  <ion-toolbar color="pink">
+    <button ion-button clear small (click)="backpage()">
+      <ion-icon name="arrow-back"></ion-icon>
+    </button>
     <ion-title>Trade</ion-title>
     <ion-buttons right>
       <button ion-button (click)="Membership()">
         <ion-icon ios="ios-home" md="md-home"></ion-icon>
       </button>
     </ion-buttons>
-  </ion-navbar>
+  </ion-toolbar>
 </ion-header>
 
 
@@ -35,7 +38,7 @@
         </ion-list>
       </ion-col>
       <ion-col col-2 style="padding-top: 30px">
-        
+
       </ion-col>
     </ion-row>
   </ion-grid>
@@ -134,7 +137,7 @@
     </ion-list>
   </ion-grid>
 
- 
+
 
   <ion-grid class="page-footer" no-padding>
     <ion-row>
