--- a/src/pages/collection-detail/collection-detail.html
+++ b/src/pages/collection-detail/collection-detail.html
@@ -1,19 +1,16 @@
-<!--
-  Generated template for the CollectionDetailPage page.
-
-  See http://ionicframework.com/docs/components/#navigation for more info on
-  Ionic pages and navigation.
--->
 <ion-header>
 
-  <ion-navbar color="pink">
+  <ion-toolbar color="pink">
+    <button ion-button clear small (click)="backpage()">
+      <ion-icon name="arrow-back"></ion-icon>
+    </button>
     <ion-title center text-center>Collection A</ion-title>
     <ion-buttons right>
       <button ion-button (click)="Membership()">
         <ion-icon ios="ios-home" md="md-home"></ion-icon>
       </button>
     </ion-buttons>
-  </ion-navbar>
+  </ion-toolbar>
 
 </ion-header>
 
