--- a/src/pages/convert/convert.html
+++ b/src/pages/convert/convert.html
@@ -1,20 +1,15 @@
-<!--
-  Generated template for the ConvertPage page.
-
-  See http://ionicframework.com/docs/components/#navigation for more info on
-  Ionic pages and navigation.
--->
 <ion-header>
-
-  <ion-navbar color="pink">
+  <ion-toolbar color="pink">
+    <button ion-button clear small (click)="backpage()">
+      <ion-icon name="arrow-back"></ion-icon>
+    </button>
     <ion-title>Convert Ticket</ion-title>
     <ion-buttons right>
-      <button ion-button (click)="Membership()">
+      <button ion-button (click)="gotoHomepage()">
         <ion-icon ios="ios-home" md="md-home"></ion-icon>
       </button>
     </ion-buttons>
-  </ion-navbar>
-
+  </ion-toolbar>
 </ion-header>
 
 
