--- a/src/pages/detailcollection/detailcollection.html
+++ b/src/pages/detailcollection/detailcollection.html
@@ -1,14 +1,11 @@
-<!--
-  Generated template for the DetailcollectionPage page.
-
-  See http://ionicframework.com/docs/components/#navigation for more info on
-  Ionic pages and navigation.
--->
 <ion-header>
 
-  <ion-navbar color="pink">
+  <ion-toolbar color="pink">
+    <button ion-button clear small (click)="backpage()">
+      <ion-icon name="arrow-back"></ion-icon>
+    </button>
     <ion-title center text-center>Detail Collection</ion-title>
-  </ion-navbar>
+  </ion-toolbar>
 
 </ion-header>
 
