--- a/src/pages/game-detail/game-detail.html
+++ b/src/pages/game-detail/game-detail.html
@@ -1,19 +1,16 @@
-<!--
-  Generated template for the TicketPage page.
-
-  See http://ionicframework.com/docs/components/#navigation for more info on
-  Ionic pages and navigation.
--->
 <ion-header>
 
-  <ion-navbar color="pink">
-    <ion-title>scratch lotto</ion-title>
+  <ion-toolbar color="pink">
+    <button ion-button clear small (click)="gotoPrePlaygamePage()">
+      <ion-icon name="arrow-back"></ion-icon>
+    </button>
+    <ion-title>Game AAA</ion-title>
     <ion-buttons right>
       <button ion-button (click)="Membership()">
         <ion-icon ios="ios-home" md="md-home"></ion-icon>
       </button>
     </ion-buttons>
-  </ion-navbar>
+  </ion-toolbar>
 
 </ion-header>
 
@@ -53,18 +50,10 @@
         Title text
       </ion-col>
       <ion-col col-12>
-        Description xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx 
-        xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx 
-        xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
-        xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx 
-        xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx 
-        xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
-        xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx 
-        xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx 
-        xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
-        xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx 
-        xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx 
-        xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
+        Description xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
+        xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
+        xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
+        xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
       </ion-col>
     </ion-row>
   </ion-grid>
