--- a/src/pages/gameresult/gameresult.html
+++ b/src/pages/gameresult/gameresult.html
@@ -1,27 +1,43 @@
 <ion-header>
-
-  <ion-navbar color="pink">
+  <ion-toolbar color="pink">
+    <button ion-button clear small (click)="gotoPrePlaygamePage()">
+      <ion-icon name="arrow-back"></ion-icon>
+    </button>
     <ion-title>Play Game xxx</ion-title>
     <ion-buttons right>
       <button ion-button (click)="gotoHome()">
         <ion-icon ios="ios-home" md="md-home"></ion-icon>
       </button>
     </ion-buttons>
-  </ion-navbar>
+  </ion-toolbar>
 
 </ion-header>
-
-
 <ion-content padding text-center>
   <h2>Game Result</h2>
-
   <div padding (click)="winpage()">
     <img src="../../assets/imgs/Reward.png" style="height: 200px;" />
   </div>
   <div>
     <h5>Win 350,000 THB!</h5>
   </div>
-
+  <ion-grid>
+    <ion-row>
+      <ion-col col-6>
+        <ion-buttons>
+          <button ion-button (click)="winpage()">
+            Win
+          </button>
+        </ion-buttons>
+      </ion-col>
+      <ion-col col-6>
+        <ion-buttons>
+          <button ion-button (click)="losepage()">
+            lose
+          </button>
+        </ion-buttons>
+      </ion-col>
+    </ion-row>
+  </ion-grid>
   <ion-grid class="page-footer" no-padding>
     <ion-row>
       <ion-col col-12 style="text-align: center;font-size: 16px" (click)="Done()">
@@ -33,4 +49,3 @@
   </ion-grid>
 
 </ion-content>
-<ion-foot
