--- a/src/pages/lottogame/lottogame.html
+++ b/src/pages/lottogame/lottogame.html
@@ -1,14 +1,15 @@
-<ion-header >
-
-  <ion-navbar color="pink">
+<ion-header>
+  <ion-toolbar color="pink">
+    <button ion-button clear small (click)="backpage()">
+      <ion-icon name="arrow-back"></ion-icon>
+    </button>
     <ion-title>Play Game xxx</ion-title>
     <ion-buttons right>
       <button ion-button (click)="gotoHome()">
         <ion-icon ios="ios-home" md="md-home"></ion-icon>
       </button>
     </ion-buttons>
-  </ion-navbar>
-
+  </ion-toolbar>
 </ion-header>
 
 
