--- a/src/pages/pre-playgame/pre-playgame.html
+++ b/src/pages/pre-playgame/pre-playgame.html
@@ -1,20 +1,15 @@
-<!--
-  Generated template for the PrePlaygamePage page.
-
-  See http://ionicframework.com/docs/components/#navigation for more info on
-  Ionic pages and navigation.
--->
 <ion-header>
-
-  <ion-navbar color="pink">
+  <ion-toolbar color="pink">
+    <button ion-button clear small (click)="backpage()">
+      <ion-icon name="arrow-back"></ion-icon>
+    </button>
     <ion-title>Ticket Game</ion-title>
     <ion-buttons right>
       <button ion-button (click)="Membership()">
         <ion-icon ios="ios-home" md="md-home"></ion-icon>
       </button>
     </ion-buttons>
-  </ion-navbar>
-
+  </ion-toolbar>
 </ion-header>
 
 
@@ -147,7 +142,15 @@
         </ion-row>
       </ion-grid>
     </ion-row>
-
+    <ion-row>
+      <ion-col col-4></ion-col>
+      <ion-col col-4>
+        <button ion-button (click)="howtoplay()">
+          <ion-icon>How To Play</ion-icon>
+        </button>
+      </ion-col>
+      <ion-col col-4></ion-col>
+    </ion-row>
 
   </ion-grid>
 
