--- a/src/pages/sell/sell.html
+++ b/src/pages/sell/sell.html
@@ -1,19 +1,26 @@
 <ion-header>
-  <ion-navbar color="pink">
+  <ion-toolbar color="pink">
+    <button ion-button clear small (click)="backpage()">
+      <ion-icon name="arrow-back"></ion-icon>
+    </button>
     <ion-title>Trade</ion-title>
     <ion-buttons right>
       <button ion-button (click)="Membership()">
         <ion-icon ios="ios-home" md="md-home"></ion-icon>
       </button>
     </ion-buttons>
-  </ion-navbar>
+  </ion-toolbar>
   <ion-grid no-padding>
-    <ion-row style="text-align: center" (click)="Trade()">
-      <ion-col col-6 style="background-color:lightgray;border: 1px solid black;">
-        <button ion-button color="dark" clear block ><b>Buy</b></button>
+    <ion-row style="text-align: center">
+      <ion-col col-6 style="background-color:lightgray;border: 1px solid black;" (click)="Trade()">
+        <button ion-button color="dark" clear block>
+          <b>Buy</b>
+        </button>
       </ion-col>
-      <ion-col col-6 class="page-button" >
-        <button ion-button color="dark" clear block style="color : white"><b>Sell</b></button>
+      <ion-col col-6 class="page-button">
+        <button ion-button color="dark" clear block style="color : white">
+          <b>Sell</b>
+        </button>
       </ion-col>
     </ion-row>
   </ion-grid>
@@ -21,7 +28,7 @@
 
 
 <ion-content>
-  
+
   <ion-grid>
     <ion-row style="padding-top: 10px"></ion-row>
     <ion-row style="background-color: lightgrey;height: 90px">
@@ -139,7 +146,9 @@
   <ion-grid class="page-footer" no-padding>
     <ion-row>
       <ion-col col-12 style="text-align: center;font-size: 16px" (click)="showConfirm()">
-        <button ion-button color="dark" clear block style="color: white"><B>Confirm</B></button>
+        <button ion-button color="dark" clear block style="color: white">
+          <B>Confirm</B>
+        </button>
       </ion-col>
     </ion-row>
   </ion-grid>
