--- a/src/pages/trade/trade.html
+++ b/src/pages/trade/trade.html
@@ -1,309 +1,272 @@
 <ion-header>
-  <ion-toolbar color="pink">
-    <button ion-button clear small (click)="backpage()">
-      <ion-icon name="arrow-back"></ion-icon>
-    </button>
-    <ion-title>Trade</ion-title>
-    <ion-buttons right>
-      <button ion-button (click)="Membership()">
-        <ion-icon ios="ios-home" md="md-home"></ion-icon>
-      </button>
-    </ion-buttons>
-  </ion-toolbar>
-  <ion-grid no-padding>
-    <ion-row style="text-align: center">
-      <ion-col col-6 class="page-button">
-        <button ion-button color="dark" clear block style="color : white;">
-          <b>Buy</b>
+    <ion-toolbar color="pink">
+        <button ion-button clear small (click)="backpage()">
+            <ion-icon name="arrow-back"></ion-icon>
+          </button>
+      <ion-title>Trade</ion-title>
+      <ion-buttons right>
+        <button ion-button (click)="Membership()">
+          <ion-icon ios="ios-home" md="md-home"></ion-icon>
         </button>
-      </ion-col>
-      <ion-col col-6 style="background-color: lightgray;border: 1px solid black;" (click)="Sell()">
-        <button ion-button color="dark" clear block>
-          <b>Sell</b>
-        </button>
-      </ion-col>
-    </ion-row>
-  </ion-grid>
-</ion-header>
-
+      </ion-buttons>
+    </ion-toolbar>
+  </ion-header>
 
 <ion-content>
-
-  <ion-grid>
-    <ion-row style="padding-top: 10px"></ion-row>
-    <ion-row padding style="background-color: lightgrey;height: 120px">
-      <ion-col col-12>
-        Buy amount
-      </ion-col>
-      <ion-col col-10>
-        <ion-list>
-          <ion-item>
-            <ion-input type="text" value=""></ion-input>
-          </ion-item>
-        </ion-list>
-      </ion-col>
-      <ion-col col-2 style="padding-top: 30px">
-        Coin
-      </ion-col>
-    </ion-row>
-  </ion-grid>
-  <ion-grid padding>
-    <ion-row style="padding-bottom: 20px">
-      <ion-col col-12 style="text-align: center">
-        <h4>History (buy)</h4>
-      </ion-col>
-    </ion-row>
-    <ion-list>
-      <ion-item no-padding>
-        <ion-row style="font-size: 10px">
-          <ion-col col-12>
-            Buy amount
-          </ion-col>
-          <ion-col col-10>
-            <ion-list>
-              <ion-item>
-                <ion-input type="text" value=""></ion-input>
-              </ion-item>
-            </ion-list>
-          </ion-col>
-          <ion-col col-2 style="padding-top: 30px">
-            Coin
-          </ion-col>
-        </ion-row>
-      </ion-grid>
-      <ion-grid padding>
-        <ion-row>
-          <ion-col col-12 style="text-align: center">
-            <h4>History (buy)</h4>
-          </ion-col>
-        </ion-row>
-        <ion-list>
-          <ion-item no-padding>
-            <ion-row style="font-size: 10px">
-              <ion-col col-12>
-                DD/MM/YY
-              </ion-col>
-              <ion-col col-4>
-                Amount
-              </ion-col>
-              <ion-col col-4>
-                Prize/Unit
-              </ion-col>
-              <ion-col col-4>
-                Total prize
-              </ion-col>
-              <ion-col col-4 style="font-size: 14px">
-                <b>100 coin</b>
-              </ion-col>
-              <ion-col col-4 style="font-size: 14px">
-                <b>100 BTH</b>
-              </ion-col>
-              <ion-col col-4 style="font-size: 14px">
-                <b>10,000 BTH</b>
-              </ion-col>
-            </ion-row>
-          </ion-item>
-          <ion-item no-padding>
-            <ion-row style="font-size: 10px">
-              <ion-col col-12>
-                DD/MM/YY
-              </ion-col>
-              <ion-col col-4>
-                Amount
-              </ion-col>
-              <ion-col col-4>
-                Prize/Unit
-              </ion-col>
-              <ion-col col-4>
-                Total prize
-              </ion-col>
-              <ion-col col-4 style="font-size: 14px">
-                <b>100 coin</b>
-              </ion-col>
-              <ion-col col-4 style="font-size: 14px">
-                <b>100 BTH</b>
-              </ion-col>
-              <ion-col col-4 style="font-size: 14px">
-                <b>10,000 BTH</b>
-              </ion-col>
-            </ion-row>
-          </ion-item>
-          <ion-item no-padding>
-            <ion-row style="font-size: 10px">
-              <ion-col col-12>
-                DD/MM/YY
-              </ion-col>
-              <ion-col col-4>
-                Amount
-              </ion-col>
-              <ion-col col-4>
-                Prize/Unit
-              </ion-col>
-              <ion-col col-4>
-                Total prize
-              </ion-col>
-              <ion-col col-4 style="font-size: 14px">
-                <b>100 coin</b>
-              </ion-col>
-              <ion-col col-4 style="font-size: 14px">
-                <b>100 BTH</b>
-              </ion-col>
-              <ion-col col-4 style="font-size: 14px">
-                <b>10,000 BTH</b>
-              </ion-col>
-            </ion-row>
-          </ion-item>
-        </ion-list>
-      </ion-grid>
-
-      <ion-grid class="page-footer" no-padding>
-        <ion-row>
-          <ion-col col-12 style="text-align: center;font-size: 16px" (click)="showConfirm()">
-            <button ion-button clear block style="color : white">
-              <b>Confirm</b>
-            </button>
-          </ion-col>
-        </ion-row>
-      </ion-grid>
-
-    </ion-list>
-
-
-    <ion-list *ngSwitchCase="'sell'">
-      <ion-grid>
-        <ion-row style="padding-top: 10px"></ion-row>
-        <ion-row style="background-color: lightgrey;height: 90px">
-          <ion-col col-12>
-            Sell amount
-          </ion-col>
-          <ion-col col-10>
-            <ion-list>
-              <ion-item>
-                <ion-input type="text" value=""></ion-input>
-              </ion-item>
-            </ion-list>
-          </ion-col>
-          <ion-col col-2 style="padding-top: 30px">
-            Coin
-          </ion-col>
-        </ion-row>
-      </ion-grid>
-
-      <ion-grid>
-        <ion-row style="padding-top: 0px"></ion-row>
-        <ion-row style="background-color: lightgrey;height: 90px">
-          <ion-col col-12>
-            Prise / Unit
-          </ion-col>
-          <ion-col col-10>
-            <ion-list>
-              <ion-item>
-                <ion-input type="text" value=""></ion-input>
-              </ion-item>
-            </ion-list>
-          </ion-col>
-          <ion-col col-2 style="padding-top: 30px">
-            THB
-          </ion-col>
-        </ion-row>
-      </ion-grid>
-
-      <ion-grid padding>
-        <ion-row>
-          <ion-col col-12 style="text-align: center">
-            <h4>List (Sell)</h4>
-          </ion-col>
-        </ion-row>
-        <ion-list>
-
-          <ion-item no-padding>
-            <ion-row style="font-size: 10px">
-              <ion-col col-12>
-                DD/MM/YY
-              </ion-col>
-              <ion-col col-3>
-                Amount
-              </ion-col>
-              <ion-col col-3>
-                Prize/Unit
-              </ion-col>
-              <ion-col col-3>
-                Sell (Unit)
-              </ion-col>
-              <ion-col col-3>
-                Total sell
-              </ion-col>
-              <ion-col col-3 style="font-size: 14px">
-                <b>100 coin</b>
-              </ion-col>
-              <ion-col col-3 style="font-size: 14px">
-                <b>100 BTH</b>
-              </ion-col>
-              <ion-col col-3 style="font-size: 14px">
-                <b>90 coin</b>
-              </ion-col>
-              <ion-col col-3 style="font-size: 14px">
-                <b>9,000 BTH</b>
-              </ion-col>
-            </ion-row>
-          </ion-item>
-
-          <ion-item no-padding>
-            <ion-row style="font-size: 10px">
-              <ion-col col-12>
-                DD/MM/YY
-              </ion-col>
-              <ion-col col-3>
-                Amount
-              </ion-col>
-              <ion-col col-3>
-                Prize/Unit
-              </ion-col>
-              <ion-col col-3>
-                Sell (Unit)
-              </ion-col>
-              <ion-col col-3>
-                Total sell
-              </ion-col>
-              <ion-col col-3 style="font-size: 14px">
-                <b>100 coin</b>
-              </ion-col>
-              <ion-col col-3 style="font-size: 14px">
-                <b>100 BTH</b>
-              </ion-col>
-              <ion-col col-3 style="font-size: 14px">
-                <b>90 coin</b>
-              </ion-col>
-              <ion-col col-3 style="font-size: 14px">
-                <b>9,000 BTH</b>
-              </ion-col>
-            </ion-row>
-          </ion-item>
-
-
-        </ion-list>
-      </ion-grid>
-
-      <ion-grid class="page-footer" no-padding>
-        <ion-row>
-          <ion-col col-12 style="text-align: center;font-size: 16px" (click)="showConfirmSell()">
-            <button ion-button color="dark" clear block style="color: white">
-              <B>Confirm</B>
-            </button>
-          </ion-col>
-        </ion-row>
-      </ion-grid>
-    </ion-list>
-  </ion-grid>
-
-  <ion-grid class="page-footer" no-padding>
-    <ion-row>
-      <ion-col col-12 style="text-align: center;font-size: 16px" (click)="showConfirm()">
-        <button ion-button clear block style="color : white">
-          <b>Confirm</b>
-        </button>
-      </ion-col>
-    </ion-row>
-  </ion-grid>
-
-</ion-content>
+    <div>
+      <ion-segment [(ngModel)]="Trade">
+        <ion-segment-button value="buy">
+          <h6>Buy</h6>
+        </ion-segment-button>
+        <ion-segment-button value="sell">
+          <h6>Sell</h6>
+        </ion-segment-button>
+      </ion-segment>
+    </div>
+  
+    <div [ngSwitch]="Trade">
+      <ion-list *ngSwitchCase="'buy'">
+        <ion-grid>
+          <ion-row style="padding-top: 10px"></ion-row>
+          <ion-row padding style="background-color: lightgrey;height: 120px">
+            <ion-col col-12>
+              Buy amount
+            </ion-col>
+            <ion-col col-10>
+              <ion-list>
+                <ion-item>
+                  <ion-input type="text" value=""></ion-input>
+                </ion-item>
+              </ion-list>
+            </ion-col>
+            <ion-col col-2 style="padding-top: 30px">
+              Coin
+            </ion-col>
+          </ion-row>
+        </ion-grid>
+        <ion-grid padding>
+          <ion-row>
+            <ion-col col-12 style="text-align: center">
+              <h4>History (buy)</h4>
+            </ion-col>
+          </ion-row>
+          <ion-list>
+            <ion-item no-padding>
+              <ion-row style="font-size: 10px">
+                <ion-col col-12>
+                  DD/MM/YY
+                </ion-col>
+                <ion-col col-4>
+                  Amount
+                </ion-col>
+                <ion-col col-4>
+                  Prize/Unit
+                </ion-col>
+                <ion-col col-4>
+                  Total prize
+                </ion-col>
+                <ion-col col-4 style="font-size: 14px">
+                  <b>100 coin</b>
+                </ion-col>
+                <ion-col col-4 style="font-size: 14px">
+                  <b>100 BTH</b>
+                </ion-col>
+                <ion-col col-4 style="font-size: 14px">
+                  <b>10,000 BTH</b>
+                </ion-col>
+              </ion-row>
+            </ion-item>
+            <ion-item no-padding>
+              <ion-row style="font-size: 10px">
+                <ion-col col-12>
+                  DD/MM/YY
+                </ion-col>
+                <ion-col col-4>
+                  Amount
+                </ion-col>
+                <ion-col col-4>
+                  Prize/Unit
+                </ion-col>
+                <ion-col col-4>
+                  Total prize
+                </ion-col>
+                <ion-col col-4 style="font-size: 14px">
+                  <b>100 coin</b>
+                </ion-col>
+                <ion-col col-4 style="font-size: 14px">
+                  <b>100 BTH</b>
+                </ion-col>
+                <ion-col col-4 style="font-size: 14px">
+                  <b>10,000 BTH</b>
+                </ion-col>
+              </ion-row>
+            </ion-item>
+            <ion-item no-padding>
+              <ion-row style="font-size: 10px">
+                <ion-col col-12>
+                  DD/MM/YY
+                </ion-col>
+                <ion-col col-4>
+                  Amount
+                </ion-col>
+                <ion-col col-4>
+                  Prize/Unit
+                </ion-col>
+                <ion-col col-4>
+                  Total prize
+                </ion-col>
+                <ion-col col-4 style="font-size: 14px">
+                  <b>100 coin</b>
+                </ion-col>
+                <ion-col col-4 style="font-size: 14px">
+                  <b>100 BTH</b>
+                </ion-col>
+                <ion-col col-4 style="font-size: 14px">
+                  <b>10,000 BTH</b>
+                </ion-col>
+              </ion-row>
+            </ion-item>
+          </ion-list>
+        </ion-grid>
+  
+        <ion-grid class="page-footer" no-padding>
+          <ion-row>
+            <ion-col col-12 style="text-align: center;font-size: 16px" (click)="showConfirm()">
+              <button ion-button clear block style="color : white">
+                <b>Confirm</b>
+              </button>
+            </ion-col>
+          </ion-row>
+        </ion-grid>
+  
+      </ion-list>
+  
+  
+      <ion-list *ngSwitchCase="'sell'">
+        <ion-grid>
+          <ion-row style="padding-top: 10px"></ion-row>
+          <ion-row style="background-color: lightgrey;height: 90px">
+            <ion-col col-12>
+              Sell amount
+            </ion-col>
+            <ion-col col-10>
+              <ion-list>
+                <ion-item>
+                  <ion-input type="text" value=""></ion-input>
+                </ion-item>
+              </ion-list>
+            </ion-col>
+            <ion-col col-2 style="padding-top: 30px">
+              Coin
+            </ion-col>
+          </ion-row>
+        </ion-grid>
+  
+        <ion-grid>
+          <ion-row style="padding-top: 0px"></ion-row>
+          <ion-row style="background-color: lightgrey;height: 90px">
+            <ion-col col-12>
+              Prise / Unit
+            </ion-col>
+            <ion-col col-10>
+              <ion-list>
+                <ion-item>
+                  <ion-input type="text" value=""></ion-input>
+                </ion-item>
+              </ion-list>
+            </ion-col>
+            <ion-col col-2 style="padding-top: 30px">
+              THB
+            </ion-col>
+          </ion-row>
+        </ion-grid>
+  
+        <ion-grid padding>
+          <ion-row>
+            <ion-col col-12 style="text-align: center">
+              <h4>List (Sell)</h4>
+            </ion-col>
+          </ion-row>
+          <ion-list>
+  
+            <ion-item no-padding>
+              <ion-row style="font-size: 10px">
+                <ion-col col-12>
+                  DD/MM/YY
+                </ion-col>
+                <ion-col col-3>
+                  Amount
+                </ion-col>
+                <ion-col col-3>
+                  Prize/Unit
+                </ion-col>
+                <ion-col col-3>
+                  Sell (Unit)
+                </ion-col>
+                <ion-col col-3>
+                  Total sell
+                </ion-col>
+                <ion-col col-3 style="font-size: 14px">
+                  <b>100 coin</b>
+                </ion-col>
+                <ion-col col-3 style="font-size: 14px">
+                  <b>100 BTH</b>
+                </ion-col>
+                <ion-col col-3 style="font-size: 14px">
+                  <b>90 coin</b>
+                </ion-col>
+                <ion-col col-3 style="font-size: 14px">
+                  <b>9,000 BTH</b>
+                </ion-col>
+              </ion-row>
+            </ion-item>
+  
+            <ion-item no-padding>
+              <ion-row style="font-size: 10px">
+                <ion-col col-12>
+                  DD/MM/YY
+                </ion-col>
+                <ion-col col-3>
+                  Amount
+                </ion-col>
+                <ion-col col-3>
+                  Prize/Unit
+                </ion-col>
+                <ion-col col-3>
+                  Sell (Unit)
+                </ion-col>
+                <ion-col col-3>
+                  Total sell
+                </ion-col>
+                <ion-col col-3 style="font-size: 14px">
+                  <b>100 coin</b>
+                </ion-col>
+                <ion-col col-3 style="font-size: 14px">
+                  <b>100 BTH</b>
+                </ion-col>
+                <ion-col col-3 style="font-size: 14px">
+                  <b>90 coin</b>
+                </ion-col>
+                <ion-col col-3 style="font-size: 14px">
+                  <b>9,000 BTH</b>
+                </ion-col>
+              </ion-row>
+            </ion-item>
+  
+  
+          </ion-list>
+        </ion-grid>
+  
+        <ion-grid class="page-footer" no-padding>
+          <ion-row>
+            <ion-col col-12 style="text-align: center;font-size: 16px" (click)="showConfirmSell()">
+              <button ion-button color="dark" clear block style="color: white">
+                <B>Confirm</B>
+              </button>
+            </ion-col>
+          </ion-row>
+        </ion-grid>
+      </ion-list>
+    </div>
+  
+  </ion-content>
