--- a/src/pages/convertclick-b/convertclick-b.html
+++ b/src/pages/convertclick-b/convertclick-b.html
@@ -46,7 +46,7 @@
     <ion-row>
       <ion-col>
         <ion-item>
-        <ion-input class="played" type="number" placeholder="Your Number" [(ngModel)]="num" (ionChange)="calculate()"></ion-input>
+        <ion-input class="played" type="number" placeholder="Your Number" [(ngModel)]="num" ></ion-input>
       </ion-item>
       </ion-col>
 
