--- a/src/pages/lottogame/lottogame.html
+++ b/src/pages/lottogame/lottogame.html
@@ -3,7 +3,7 @@
     <button ion-button clear small (click)="backpage()">
       <ion-icon name="arrow-back"></ion-icon>
     </button>
-    <ion-title>Play Game xxx</ion-title>
+    <ion-title>Play Scratch Game</ion-title>
     <ion-buttons right>
       <button ion-button (click)="gotoHome()">
         <ion-icon ios="ios-home" md="md-home"></ion-icon>
@@ -14,7 +14,7 @@
 
 
 <ion-content padding text-center>
-  <h2 style="margin-top: 20px;margin-bottom: 20px;">Lotto Game</h2>
+  <h2 style="margin-top: 20px;margin-bottom: 20px;">Scratch Game</h2>
   <ion-grid>
     <ion-row>
       <ion-col (click)="Gameresult()">
@@ -26,9 +26,6 @@
       <ion-col (click)="Gameresult()">
         <img src="../../assets/imgs/cirpink.png" style="height: 50px;" />
       </ion-col>
-      <ion-col (click)="Gameresult()">
-        <img src="../../assets/imgs/cirpink.png" style="height: 50px;" />
-      </ion-col>
     </ion-row>
     <ion-row>
       <ion-col (click)="Gameresult()">
@@ -40,28 +37,8 @@
       <ion-col (click)="Gameresult()">
         <img src="../../assets/imgs/cirpink.png" style="height: 50px;" />
       </ion-col>
-      <ion-col (click)="Gameresult()">
-        <img src="../../assets/imgs/cirpink.png" style="height: 50px;" />
-      </ion-col>
     </ion-row>
     <ion-row>
-      <ion-col (click)="Gameresult()">
-        <img src="../../assets/imgs/cirpink.png" style="height: 50px;" />
-      </ion-col>
-      <ion-col (click)="Gameresult()">
-        <img src="../../assets/imgs/cirpink.png" style="height: 50px;" />
-      </ion-col>
-      <ion-col (click)="Gameresult()">
-        <img src="../../assets/imgs/cirpink.png" style="height: 50px;" />
-      </ion-col>
-      <ion-col (click)="Gameresult()">
-        <img src="../../assets/imgs/cirpink.png" style="height: 50px;" />
-      </ion-col>
-    </ion-row>
-    <ion-row>
-      <ion-col (click)="Gameresult()">
-        <img src="../../assets/imgs/cirpink.png" style="height: 50px;" />
-      </ion-col>
       <ion-col (click)="Gameresult()">
         <img src="../../assets/imgs/cirpink.png" style="height: 50px;" />
       </ion-col>
