--- a/src/pages/pre-play-slot/pre-play-slot.html
+++ b/src/pages/pre-play-slot/pre-play-slot.html
@@ -44,7 +44,7 @@
         </ion-row>
         <ion-row>
           <ion-col col-9 class="game-title">
-            Scratch Game
+            Slot Game
           </ion-col>
           <ion-col col-3 class="play-title">
             Play >
@@ -62,7 +62,7 @@
         </ion-row>
         <ion-row>
           <ion-col col-9 class="game-title">
-            Scratch Game
+            Slot Game
           </ion-col>
           <ion-col col-3 class="play-title">
             Play >
@@ -80,7 +80,7 @@
         </ion-row>
         <ion-row>
           <ion-col col-9 class="game-title">
-            Scratch Game
+            Slot Game
           </ion-col>
           <ion-col col-3 class="play-title">
             Play >
@@ -98,7 +98,7 @@
         </ion-row>
         <ion-row>
           <ion-col col-9 class="game-title">
-            Scratch Game
+            Slot Game
           </ion-col>
           <ion-col col-3 class="play-title">
             Play >
@@ -116,7 +116,7 @@
         </ion-row>
         <ion-row>
           <ion-col col-9 class="game-title">
-            Scratch Game
+            Slot Game
           </ion-col>
           <ion-col col-3 class="play-title">
             Result >
@@ -134,7 +134,7 @@
         </ion-row>
         <ion-row>
           <ion-col col-9 class="game-title">
-            Scratch Game
+            Slot Game
           </ion-col>
           <ion-col col-3 class="play-title">
             Result >
