--- a/src/pages/ticket/ticket.html
+++ b/src/pages/ticket/ticket.html
@@ -52,7 +52,7 @@
       </ion-row>
       <ion-row>
         <ion-col>
-          <div (click)="goToPrePlay()">
+          <div (click)="goToPrePlaySlot()">
             <img src="../../assets/imgs/GameB.jpg" style="height: 120px;width: 300px" />
           </div>
         </ion-col>
