--- a/src/pages/game-detail/game-detail.html
+++ b/src/pages/game-detail/game-detail.html
@@ -4,7 +4,7 @@
     <button ion-button clear small (click)="gotoPrePlaygamePage()">
       <ion-icon name="arrow-back"></ion-icon>
     </button>
-    <ion-title>Game AAA</ion-title>
+    <ion-title>Scratch Game</ion-title>
     <ion-buttons right>
       <button ion-button (click)="Membership()">
         <ion-icon ios="ios-home" md="md-home"></ion-icon>
@@ -24,7 +24,7 @@
         Round : 1 (01/07/2018-30/07/2018)
       </ion-col>
       <ion-col col-12>
-        <h2>scratch lotto</h2>
+        <h2>Scratch lotto</h2>
       </ion-col>
     </ion-row>
   </ion-grid>
