--- a/src/pages/gameresult/gameresult.html
+++ b/src/pages/gameresult/gameresult.html
@@ -3,7 +3,7 @@
     <button ion-button clear small (click)="gotoPrePlaygamePage()">
       <ion-icon name="arrow-back"></ion-icon>
     </button>
-    <ion-title>Play Game xxx</ion-title>
+    <ion-title>Play Scratch Game</ion-title>
     <ion-buttons right>
       <button ion-button (click)="gotoHome()">
         <ion-icon ios="ios-home" md="md-home"></ion-icon>
@@ -14,13 +14,13 @@
 </ion-header>
 <ion-content padding text-center>
   <h2>Game Result</h2>
-  <div padding (click)="winpage()">
+  <div padding>
     <img src="../../assets/imgs/Reward.png" style="height: 200px;" />
   </div>
   <div>
     <h5>Win 350,000 THB!</h5>
   </div>
-  <ion-grid>
+  <!-- <ion-grid>
     <ion-row>
       <ion-col col-6>
         <ion-buttons>
@@ -37,7 +37,7 @@
         </ion-buttons>
       </ion-col>
     </ion-row>
-  </ion-grid>
+  </ion-grid> -->
   <ion-grid class="page-footer" no-padding>
     <ion-row>
       <ion-col col-12 style="text-align: center;font-size: 16px" (click)="Done()">
