UPDATE value to page

--- a/src/pages/membership/membership.html
+++ b/src/pages/membership/membership.html
@@ -36,7 +36,8 @@
         </b>
       </ion-col>
       <ion-col col-8>
-        <b>2,500</b>
+        <b>{{user.coins}}</b>
+        <b> Money left: {{user.money}}</b>
       </ion-col>
     </ion-row>
     <ion-grid no-padding>
