--- a/src/pages/ticket/ticket.html
+++ b/src/pages/ticket/ticket.html
@@ -29,7 +29,7 @@
           scratch lotto
         </ion-col>
         <ion-col col-4 offset-4>
-          <ion-badge color="secondary"> (Ticket 0)</ion-badge>
+          <ion-badge color="secondary"> (Ticket {{user.scratchGame.tickets}})</ion-badge>
         </ion-col>
       </ion-row>
       <ion-row>
@@ -47,7 +47,7 @@
           slot machine
         </ion-col>
         <ion-col col-4 offset-4>
-          <ion-badge color="secondary"> (Ticket 0)</ion-badge>
+          <ion-badge color="secondary"> (Ticket {{user.slotGame.tickets}})</ion-badge>
         </ion-col>
       </ion-row>
       <ion-row>
