--- a/src/pages/slotgame/slotgame.html
+++ b/src/pages/slotgame/slotgame.html
@@ -14,5 +14,13 @@
 
 
 <ion-content padding>
-
+  <ion-grid class="page-footer" no-padding>
+    <ion-row>
+      <ion-col col-12 style="text-align: center;font-size: 16px" (click)="al()">
+        <button ion-button color="dark" clear block>
+          <b>Result</b>
+        </button>
+      </ion-col>
+    </ion-row>
+  </ion-grid>
 </ion-content>
