add scratch game

--- a/src/pages/lottogame/lottogame.html
+++ b/src/pages/lottogame/lottogame.html
@@ -17,59 +17,36 @@
   <h2 style="margin-top: 20px;margin-bottom: 20px;">Lotto Game</h2>
   <ion-grid>
     <ion-row>
-      <ion-col (click)="Gameresult()">
-        <img src="../../assets/imgs/cirpink.png" style="height: 50px;" />
+      <ion-col >
+        <img src="{{img1}}" (click)="addEvent1();">
       </ion-col>
-      <ion-col (click)="Gameresult()">
-        <img src="../../assets/imgs/cirpink.png" style="height: 50px;" />
+      <ion-col >
+        <img src="{{img2}}" (click)="addEvent2();">
       </ion-col>
-      <ion-col (click)="Gameresult()">
-        <img src="../../assets/imgs/cirpink.png" style="height: 50px;" />
-      </ion-col>
-      <ion-col (click)="Gameresult()">
-        <img src="../../assets/imgs/cirpink.png" style="height: 50px;" />
+      <ion-col >
+        <img src="{{img3}}" (click)="addEvent3();">
       </ion-col>
     </ion-row>
     <ion-row>
-      <ion-col (click)="Gameresult()">
-        <img src="../../assets/imgs/cirpink.png" style="height: 50px;" />
+      <ion-col >
+        <img src="{{img4}}" (click)="addEvent4();">
       </ion-col>
-      <ion-col (click)="Gameresult()">
-        <img src="../../assets/imgs/cirpink.png" style="height: 50px;" />
+      <ion-col >
+        <img src="{{img5}}" (click)="addEvent5();">
       </ion-col>
-      <ion-col (click)="Gameresult()">
-        <img src="../../assets/imgs/cirpink.png" style="height: 50px;" />
-      </ion-col>
-      <ion-col (click)="Gameresult()">
-        <img src="../../assets/imgs/cirpink.png" style="height: 50px;" />
+      <ion-col >
+        <img src="{{img6}}" (click)="addEvent6();">
       </ion-col>
     </ion-row>
     <ion-row>
-      <ion-col (click)="Gameresult()">
-        <img src="../../assets/imgs/cirpink.png" style="height: 50px;" />
+      <ion-col >
+        <img src="{{img7}}" (click)="addEvent7();">
       </ion-col>
-      <ion-col (click)="Gameresult()">
-        <img src="../../assets/imgs/cirpink.png" style="height: 50px;" />
+      <ion-col >
+        <img src="{{img8}}" (click)="addEvent8();">
       </ion-col>
-      <ion-col (click)="Gameresult()">
-        <img src="../../assets/imgs/cirpink.png" style="height: 50px;" />
-      </ion-col>
-      <ion-col (click)="Gameresult()">
-        <img src="../../assets/imgs/cirpink.png" style="height: 50px;" />
-      </ion-col>
-    </ion-row>
-    <ion-row>
-      <ion-col (click)="Gameresult()">
-        <img src="../../assets/imgs/cirpink.png" style="height: 50px;" />
-      </ion-col>
-      <ion-col (click)="Gameresult()">
-        <img src="../../assets/imgs/cirpink.png" style="height: 50px;" />
-      </ion-col>
-      <ion-col (click)="Gameresult()">
-        <img src="../../assets/imgs/cirpink.png" style="height: 50px;" />
-      </ion-col>
-      <ion-col (click)="Gameresult()">
-        <img src="../../assets/imgs/cirpink.png" style="height: 50px;" />
+      <ion-col >
+        <img src="{{img9}}" (click)="addEvent9();">
       </ion-col>
     </ion-row>
   </ion-grid>
