--- a/src/pages/gameresult/gameresult.html
+++ b/src/pages/gameresult/gameresult.html
@@ -40,7 +40,7 @@
   </ion-grid> -->
   <ion-grid class="page-footer" no-padding>
     <ion-row>
-      <ion-col col-12 style="text-align: center;font-size: 16px" (click)="al()">
+      <ion-col col-12 style="text-align: center;font-size: 16px" (click)="openModal()">
         <button ion-button style="color:white;" clear block>
           <b>Done</b>
         </button>
