--- a/src/pages/marketplace/marketplace.html
+++ b/src/pages/marketplace/marketplace.html
@@ -16,55 +16,54 @@
 
 
 <ion-content padding>
-
-  <ion-card style="background-color: lightgray">
-    <ion-list-header>
-      DD/MM/YY
+  <ion-card (click)="ConfirmBuy()">
+    <ion-list-header style="background-color: lightcoral  ">
+      01/08/2018
     </ion-list-header>
 
-    <ion-card-content>
+    <ion-card-content style="background-color: #ffccf3" >
       <div class="item">
-        <b float-left>item A</b>
-        <b float-right>5,000 THB</b>
+        <b float-left class="card-top">item A</b>
+        <b float-right class="card-top">5,000 THB</b>
       </div>
     </ion-card-content>
   </ion-card>
 
-  <ion-card style="background-color: lightgray">
-    <ion-list-header>
-      DD/MM/YY
+  <ion-card (click)="ConfirmBuy1()">
+    <ion-list-header style="background-color: lightcoral  ">
+        02/08/2018
     </ion-list-header>
 
-    <ion-card-content>
+    <ion-card-content style="background-color: #ffccf3">
       <div class="item">
-        <b float-left>item B</b>
-        <b float-right>1,000 THB</b>
+        <b float-left class="card-top">item B</b>
+        <b float-right class="card-top">1,000 THB</b>
       </div>
     </ion-card-content>
   </ion-card>
 
-  <ion-card style="background-color: lightgray">
-    <ion-list-header>
-      DD/MM/YY
+  <ion-card (click)="ConfirmBuy2()">
+    <ion-list-header style="background-color: lightcoral  ">
+        03/08/2018
     </ion-list-header>
 
-    <ion-card-content>
-      <div class="item">
-        <b float-left>item C</b>
-        <b float-right>15,000 THB</b>
+    <ion-card-content style="background-color: #ffccf3">
+      <div class="item" >
+        <b float-left class="card-top">item C</b>
+        <b float-right class="card-top">15,000 THB</b>
       </div>
     </ion-card-content>
   </ion-card>
 
-  <ion-card style="background-color: lightgray">
-    <ion-list-header>
-      DD/MM/YY
+  <ion-card (click)="ConfirmBuy3()" > 
+    <ion-list-header style="background-color: lightcoral  ">
+        03/08/2018
     </ion-list-header>
 
-    <ion-card-content>
+    <ion-card-content style="background-color: #ffccf3">
       <div class="item">
-        <b float-left>item D</b>
-        <b float-right>20,000 THB</b>
+        <b float-left class="card-top">item D</b>
+        <b float-right class="card-top">20,000 THB</b>
       </div>
     </ion-card-content>
   </ion-card>
