--- a/src/pages/mycollect/mycollect.html
+++ b/src/pages/mycollect/mycollect.html
@@ -16,7 +16,7 @@
 
 
 <ion-content padding>
-  <h2 style="margin-top: 20px;margin-bottom: 20px;" align='right' (click)="his()">Trade History</h2>
+  <h2 style="margin-top: 20px;margin-bottom: 20px;" align='center' (click)="his()">Trade History</h2>
 
   <ion-grid text-center>
     <ion-row>
