--- a/src/pages/trade/trade.html
+++ b/src/pages/trade/trade.html
@@ -19,10 +19,9 @@
           <h6>Buy</h6>
         </ion-segment-button>
         <ion-segment-button value="sell">
-          <h6>Sell</h6>
+          Sell
         </ion-segment-button>
       </ion-segment>
-    </div>
   
     <div [ngSwitch]="Trade">
       <ion-list *ngSwitchCase="'buy'" ngSelected="selected">
