--- a/src/pages/detailcollection/detailcollection.html
+++ b/src/pages/detailcollection/detailcollection.html
@@ -19,7 +19,7 @@
   <ion-grid text-center>
     <ion-row>
       <ion-col col-3></ion-col>
-      <ion-col col-6 class="b" (click)="detail()" style="border: solid 1px">
+      <ion-col col-6 class="b" style="border: solid 1px">
         <img src="../../assets/imgs/diamonds.png" style="height: 120px;" />
         <div text-right>
           x1
