--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,5 +1,5 @@
 <ion-header>
-  <ion-navbar color="pink">
+  <ion-navbar hideBackButton color="pink">
     <ion-buttons right>
       <button ion-button>
         <ion-icon name="bookmark"></ion-icon>
