--- a/src/pages/membership/membership.html
+++ b/src/pages/membership/membership.html
@@ -14,25 +14,41 @@
         <img src="../../assets/imgs/banner2.jpg" style="height: 140px;width: 400px" />
       </div>
     </ion-row>
-    <ion-row style="text-align: center">
-      <ion-col col-4>
-        <button ion-button block color="dark" (click)="Trade()">Trade</button>
-      </ion-col>
-      <ion-col col-4>
-        <button ion-button block color="dark" (click)="Collection()">Collection</button>
-      </ion-col>
-      <ion-col col-4>
-        <button ion-button block color="dark" (click)="Ticket()">Ticket</button>
-      </ion-col>
-    </ion-row>
+
+    <div style="background-color:#222; margin-top:60px;height: 35%;">
+      <ion-grid>
+        <ion-row text-center>
+          <ion-col style="padding: 1%">
+            <button ion-button block style="background-color: rgb(70, 70, 70);height: 43px;margin-top:-4.5px;" (click)="Trade()">Trade</button>
+          </ion-col>
+          <ion-col style="padding: 1%">
+            <button ion-button block style="background-color: rgb(70, 70, 70) ;height: 43px;margin-top:-4.5px" (click)="Collection()">Collection</button>
+          </ion-col>
+          <ion-col style="padding: 1%">
+            <button ion-button block style="background-color: rgb(70, 70, 70) ;height: 43px;margin-top:-4.5px" (click)="Ticket()">Ticket</button>
+          </ion-col>
+        </ion-row>
+
+      </ion-grid>
+    </div>
+    <!-- <ion-item no-lines style="background-color:#222; margin-top:60px"  >
+
+        <button class="button"  ion-button style="background-color: rgb(70, 70, 70)" (click)="Trade()">Trade</button>
+   
+        <button class="button" ion-button style="background-color: rgb(70, 70, 70) " (click)="Collection()">Collection</button>
+
+        <button class="button" ion-button style="background-color: rgb(70, 70, 70) " (click)="Ticket()">Ticket</button>
+
+  </ion-item> -->
+
   </ion-grid>
 
   <ion-grid>
-    <ion-row style="padding-top: 180px"></ion-row>
-    <ion-row padding>
+    <ion-row style="padding-top: 150px"></ion-row>
+    <ion-row padding style="color: red">
       <ion-col col-4>
         <b>
-          <i>Lotto Coin</i>
+          <i>Lotto Coin :</i>
         </b>
       </ion-col>
       <ion-col col-8>
