--- a/src/pages/start/start.html
+++ b/src/pages/start/start.html
@@ -19,7 +19,7 @@
     <ion-input type="number" [(ngModel)]="user.ethereum" (ionChange)="coinsCal()"></ion-input>
   </ion-item>
   <h2>คุณจะได้รับจำนวน {{user.coins}} Coins</h2>
-  <h3>ใช้เงิน {{amount}}</h3>
+  <h3>ใช้เงิน {{amount}} บาท</h3>
   <button ion-button color="pink" (click)="goToHome()">Next</button>
 
 </ion-content>
