--- a/src/pages/success/success.html
+++ b/src/pages/success/success.html
@@ -1,5 +1,5 @@
 <ion-header>
-  <ion-navbar>
+  <ion-navbar hideBackButton>
     <ion-title>Trading Detail</ion-title>
   </ion-navbar>
 </ion-header>
