add slot game result page

--- a/src/pages/gameresult/gameresult.html
+++ b/src/pages/gameresult/gameresult.html
@@ -3,7 +3,7 @@
     <button ion-button clear small (click)="gotoPrePlaygamePage()">
       <ion-icon name="arrow-back"></ion-icon>
     </button>
-    <ion-title>Play Scratch Game</ion-title>
+    <ion-title>Result</ion-title>
     <ion-buttons right>
       <button ion-button (click)="gotoHome()">
         <ion-icon ios="ios-home" md="md-home"></ion-icon>
@@ -13,31 +13,30 @@
 
 </ion-header>
 <ion-content padding text-center>
-  <h2>Game Result</h2>
-  <div padding>
-    <img src="../../assets/imgs/Reward.png" style="height: 200px;" />
-  </div>
-  <div>
-    <h5>Win 350,000 THB!</h5>
-  </div>
-  <!-- <ion-grid>
+  <h2>Poker Scratch</h2>
+  <ion-grid>
     <ion-row>
-      <ion-col col-6>
-        <ion-buttons>
-          <button ion-button (click)="winpage()">
-            Win
-          </button>
-        </ion-buttons>
+      <ion-col class="b">
+        <img src="">
       </ion-col>
-      <ion-col col-6>
-        <ion-buttons>
-          <button ion-button (click)="losepage()">
-            lose
-          </button>
-        </ion-buttons>
+      <ion-col class="b">
+        <img src="">
+      </ion-col>
+      <ion-col class="b">
+        <img src="">
+      </ion-col>
+      <ion-col class="b">
+        <img src="">
+      </ion-col>
+      <ion-col class="b">
+        <img src="">
       </ion-col>
     </ion-row>
-  </ion-grid> -->
+  </ion-grid>
+  <h2>!! Full House !!</h2>
+  <div>
+    <h5>Win 1000 ETH</h5>
+  </div>
   <ion-grid class="page-footer" no-padding>
     <ion-row>
       <ion-col col-12 style="text-align: center;font-size: 16px" (click)="openModal()">
