--- a/src/pages/lottogame/lottogame.html
+++ b/src/pages/lottogame/lottogame.html
@@ -3,7 +3,7 @@
     <button ion-button clear small (click)="backpage()">
       <ion-icon name="arrow-back"></ion-icon>
     </button>
-    <ion-title>Play Game xxx</ion-title>
+    <ion-title>Play Game</ion-title>
     <ion-buttons right>
       <button ion-button (click)="gotoHome()">
         <ion-icon ios="ios-home" md="md-home"></ion-icon>
@@ -14,7 +14,7 @@
 
 
 <ion-content padding text-center>
-  <h2 style="margin-top: 20px;margin-bottom: 20px;">Lotto Game</h2>
+  <h2 style="margin-top: 20px;margin-bottom: 20px;">Poker Scratch</h2>
   <ion-grid>
     <ion-row>
       <ion-col >
