--- a/src/pages/slotgame/slotgame.html
+++ b/src/pages/slotgame/slotgame.html
@@ -1,22 +1,25 @@
-<!--
-  Generated template for the SlotgamePage page.
-
-  See http://ionicframework.com/docs/components/#navigation for more info on
-  Ionic pages and navigation.
--->
 <ion-header>
-
-  <ion-navbar>
-    <ion-title>slotgame</ion-title>
-  </ion-navbar>
-
+  <ion-toolbar color="pink">
+    <button ion-button clear small (click)="backpage()">
+      <ion-icon name="arrow-back"></ion-icon>
+    </button>
+    <ion-title>Slot Game</ion-title>
+    <ion-buttons right>
+      <button ion-button (click)="gotoHome()">
+        <ion-icon ios="ios-home" md="md-home"></ion-icon>
+      </button>
+    </ion-buttons>
+  </ion-toolbar>
 </ion-header>
 
 
-<ion-content padding>
+<ion-content padding text-center>
+  <h2 style="margin-top: 20px;margin-bottom: 20px;">Slot Game</h2>
+  <img  src="{{img}}" (click)="addEvent();">
+  
   <ion-grid class="page-footer" no-padding>
     <ion-row>
-      <ion-col col-12 style="text-align: center;font-size: 16px" (click)="al()">
+      <ion-col col-12 style="text-align: center;font-size: 16px" (click)="Gameresultslot()">
         <button ion-button color="dark" clear block>
           <b>Result</b>
         </button>
