--- a/src/pages/web2/web2.html
+++ b/src/pages/web2/web2.html
@@ -22,12 +22,12 @@
     <ion-grid>
       <ion-row>
         <ion-col col-12 text-center>
-          <button center id="br" color="light" style="height: 220px" ion-button (click)="doAlert()">
-            <img src="../assets/imgs/QR3.png">
+          <button center id="br" color="light" style="height: 220px" ion-button (click)="showRadio()">
+            <img src="../assets/imgs/money.png">
           </button>
           <br>
           <br>
-          <p text-center style="font-size: 18px">ico amount : 5,000,000 THB</p>
+          <p text-center style="font-size: 18px">ico amount : 5,000,000 ETH</p>
         </ion-col>
       </ion-row>
     </ion-grid>
