--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -17,12 +17,12 @@
     <ion-item no-padding>
       <ion-grid (click)="Membership()">
         <ion-row>
-          <ion-col col-2>
+          <!-- <ion-col col-2>
             <div style="padding-top: 30px">
               <img src="../../assets/imgs/logo1.PNG" />
             </div>
-          </ion-col>
-          <ion-col col-7>
+          </ion-col> -->
+          <!-- <ion-col col-7>
             <ion-grid>
               <ion-row>
                 <ion-col col-12>
@@ -39,14 +39,15 @@
           </ion-col>
           <ion-col col-3 style="padding-top: 15px;text-align: right">
             <ion-icon name="time"> 00.00</ion-icon>
-          </ion-col>
+          </ion-col> -->
         </ion-row>
       </ion-grid>
     </ion-item>
   </ion-list>
-  <ion-grid class="page-footer" no-padding>
-    <ion-row style="align-self: center">
-      <img src="../../assets/imgs/foot.PNG" />
-    </ion-row>
-  </ion-grid>
+  
+  <ion-footer>
+        
+         <div><img src="../../assets/imgs/foot.PNG" (click)="ScanQR()" /></div>
+         
+  </ion-footer> 
 </ion-content>
