--- a/src/pages/web1/web1.html
+++ b/src/pages/web1/web1.html
@@ -13,77 +13,34 @@
 </ion-header>
 
 <ion-content>
-  <ion-card>
+  <ion-card (click)="goweb2()" style="background-color: rgb(255, 254, 254)">
     <ion-list>
       <ion-item>
         <ion-grid>
           <ion-row>
-            <ion-col>
-              <ion-list>
-                <ion-row>
-                  <ion-col col-4>
-                    <button color="primary" style="font-size: 18px;height: 70px;" ion-button full (click)="goweb2()">R.3</button>
-                  </ion-col>
-                  <ion-col col-8>
-                    <ion-item>
-                      <h2 style="font-size: 22px; color: #000000">
-                        <b>ico Phase</b>
-                      </h2>
-                      <p>ico:1,000,000 THB</p>
-                    </ion-item>
-                  </ion-col>
-                  <ion-col col-6>
-                    <button color="hotpink" style="font-size: 12px;height: 50px;" ion-button full (click)="goweb2()">Raising funds</button>
-                  </ion-col>
-                  <ion-col col-6>
-                    <button color="secondary" style="font-size: 12px;height: 50px" ion-button full (click)="goweb3()">Success</button>
-                  </ion-col>
-                </ion-row>
-              </ion-list>
-            </ion-col>
-            <ion-col>
-              <ion-item text-center>
-                <p>Round : 3 (1/07/2018-30/07/2018) </p>
-              </ion-item>
-            </ion-col>
-            <ion-col item-end>
-              <button style="font-size: 15px; color: #000000" ion-button clear item-end>Dtail ></button>
-            </ion-col>
-          </ion-row>
-        </ion-grid>
-      </ion-item>
-    </ion-list>
-  </ion-card>
-  <!-- 2 -->
-  <ion-card>
-    <ion-list>
-      <ion-item>
-        <ion-grid>
-          <ion-row>
-            <ion-col>
-              <ion-list>
-                <ion-row>
-                  <ion-col col-4>
-                    <button style="font-size: 18px;height: 70px; background: grey" ion-button full>R.2</button>
-                  </ion-col>
-                  <ion-col col-8>
-                    <ion-item>
-                      <h2 style="font-size: 22px; color: #000000">
-                        <b>ico Phase</b>
-                      </h2>
-                      <p>ico:5,000,000 THB</p>
-                    </ion-item>
-                  </ion-col>
-                </ion-row>
-              </ion-list>
-            </ion-col>
+
+            <ion-list>
+              <ion-row>
+                <ion-col col-4>
+                  <button style="font-size: 18px;height: 70px;width: 70px; background: grey" full>R.1</button>
+                </ion-col>
+                <ion-col col-8>
+                  <ion-item>
+                    <h2 style="font-size: 22px; color: #000000">
+                      <b>ico Phase</b>
+                    </h2>
+                    <p>ico:1,000,000 ETH</p>
+                  </ion-item>
+                </ion-col>
+              </ion-row>
+            </ion-list>
             <ion-col>
               <ion-item text-center>
                 <p>Round : 2 (1/07/2018-30/07/2018) </p>
               </ion-item>
             </ion-col>
-            <ion-col item-end>
-              <button style="font-size: 15px; color: #000000" ion-button clear item-end>Dtail ></button>
+            <ion-col col-2>
+              <button style="font-size: 15px; color: #000000" ion-button clear item-end>Detail ></button>
             </ion-col>
           </ion-row>
         </ion-grid>
@@ -91,43 +48,41 @@
     </ion-list>
   </ion-card>
 
-  <ion-card>
-    <ion-list>
-      <ion-item>
-        <ion-grid>
-          <ion-row>
-            <ion-col>
-              <ion-list>
-                <ion-row>
-                  <ion-col col-4>
-                    <button style="font-size: 18px;height: 70px; background: grey" ion-button full>R.2</button>
-                  </ion-col>
-                  <ion-col col-8>
-                    <ion-item>
-                      <h2 style="font-size: 22px; color: #000000">
-                        <b>ico Phase</b>
-                      </h2>
-                      <p>ico:5,000,000 THB</p>
-                    </ion-item>
-                  </ion-col>
-                </ion-row>
-              </ion-list>
-            </ion-col>
-            <ion-col>
-              <ion-item text-center>
-                <p>Round : 1 (1/07/2018-30/07/2018) </p>
-              </ion-item>
-            </ion-col>
-            <ion-col item-end>
-              <button style="font-size: 15px; color: #000000" ion-button clear item-end>Dtail ></button>
-            </ion-col>
-          </ion-row>
-        </ion-grid>
-      </ion-item>
-    </ion-list>
-  </ion-card>
 
-  <ion-buttons text-center>
-    <button ion-button (click)="home()"> home </button>
-  </ion-buttons>
+  <!-- 2 -->
+  <ion-card (click)="goweb3()" style="background-color: rgb(255, 254, 254)">
+      <ion-list>
+          <ion-item>
+            <ion-grid>
+              <ion-row>
+    
+                <ion-list>
+                  <ion-row>
+                    <ion-col col-3>
+                      <button style="font-size: 18px;height: 70px;width: 70px; background: grey" full>R.1</button>
+                    </ion-col>
+                    <ion-col col-9>
+                      <ion-item>
+                        <h2 style="font-size: 22px; color: #000000">
+                          <b>Ending 30/06/2018</b>
+                        </h2>
+                        <p>ico:5,000,000 ETH</p>
+                      </ion-item>
+                    </ion-col>
+                  </ion-row>
+                </ion-list>
+                <ion-col>
+                  <ion-item text-center>
+                    <p>Round : 1 (1/07/2018-30/07/2018)</p>
+                  </ion-item>
+                </ion-col>
+                <ion-col col-2>
+                  <button style="font-size: 15px; color: #000000" ion-button clear item-end>Detail ></button>
+                </ion-col>
+              </ion-row>
+            </ion-grid>
+          </ion-item>
+        </ion-list>
+    
+  </ion-card>
 </ion-content>
