--- a/src/pages/web3/web3.html
+++ b/src/pages/web3/web3.html
@@ -10,11 +10,11 @@
       <ion-row>
         <ion-col col-12 text-center>
           <button center id="br" color="light" style="height: 220px" ion-button (click)="doAlert()">
-            <img src="../assets/imgs/QR3.png">
+            <img src="../assets/imgs/games.png">
           </button>
           <br><br>
           <h6>
-            <b>Prize Pool : 1,000,000 THB</b>
+            <b>Prize Pool : 1,000,000 ETH</b>
             <br> Round : 1 (01/07/2018-30/07/2018)
           </h6>
         </ion-col><br><br>
